correction bugs et media queries version tablette

--- a/stylebooki.css
+++ b/stylebooki.css
@@ -28,7 +28,6 @@ p, a
     color: black;
 }
 
-
 h3
 {
     font-size: 18px;
@@ -48,8 +47,8 @@ header
     justify-content: space-between;
     height: 100px;
     margin-bottom: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 
 #logo
@@ -72,6 +71,14 @@ header
 header nav
 {
     width: 35%;
+}
+
+@media (max-width:992px)
+{
+    header nav
+    {
+        width: 50%;
+    }
 }
 
 header ul
@@ -108,16 +115,15 @@ header ul
 {
     display: flex;
     flex-direction: column;
-    margin-right: 30px;
-    margin-left: 30px;    
+    margin-right: 20px;
+    margin-left: 20px;    
 }
 
 #recherche_intro
 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    
+    justify-content: space-between;    
 }
 
 #recherche_intro h1
@@ -136,6 +142,10 @@ header ul
 
 /*style formulaire*/
 
+.fa-search
+{
+    display: none;
+}
 
 .formulaire
 {
@@ -193,7 +203,6 @@ header ul
 
 /*style barre de filtres*/
 
-
 #filtre
 {
     display: flex;
@@ -220,8 +229,8 @@ header ul
 
 .lien_filtre
 {
-     display: flex; 
-     justify-content: space-between; 
+    display: flex; 
+    justify-content: space-between; 
     align-items: center; 
     border: 2px solid #Dcdcdc;
     height: 46px;
@@ -238,7 +247,6 @@ header ul
     background-color: #0065FC;
 }
 
-
 .filtres_icones
 {
     margin-right: 20px;
@@ -252,6 +260,7 @@ header ul
     background-color: #DEEBFF;
     
 }
+
 .lien_filtre:hover .filtres_icones
 {
     background-color: #0065FC;
@@ -267,14 +276,12 @@ header ul
     color: white;
 }
 
-
 /*style infos*/
 
 #infos
 {
     display: flex;
-    align-items: center;
-    
+    align-items: center;   
 }
 
 .fa-info
@@ -300,9 +307,8 @@ main
     flex-direction: column;
     justify-content: space-between;
     margin-top: 25px;
-    margin-right: 30px;
-    margin-left: 30px;
-    
+    margin-right: 20px;
+    margin-left: 20px;   
 }
 
 #section_principale
@@ -330,7 +336,8 @@ main
 
 article
 {
-    width: 59%;
+    width: 62%;
+    margin-right: 10px;
 }
 
 .hebergements
@@ -342,8 +349,7 @@ article
 
 .vignettes
 {
-    background-color: white;
-     
+    background-color: white;   
     margin-bottom: 30px;
     border-radius: 20px;
     box-shadow: -3px 2px 6px #Dcdcdc;
@@ -351,8 +357,23 @@ article
 
 article .vignettes
 {
-    width: 31%; 
-    height: 200px;
+    width: 32%; 
+    height: 210px;
+    display: flex;
+    flex-direction: column;
+}
+
+@media (max-width:992px)
+{
+    article .vignettes
+    {
+        width: 48%;
+    }
+
+    article
+    {
+        width: 65%;
+    } 
 }
 
 .vignettes:hover
@@ -360,13 +381,11 @@ article .vignettes
     box-shadow: -3px 2px 20px #Dcdcdc;
 }
 
-.vignettes_conteneur
+article .vignettes a
 {
-    display: flex;
-    flex-direction: column;
     height: 100%;
     width: 100%;
-    border-radius: 20px;
+    border-radius: 20px
 }
 
 .vignettes_image
@@ -376,48 +395,44 @@ article .vignettes
 
 article .vignettes_image
 {
-    height: 110px;
-    margin: 5px 5px 0px 5px;
+    height: 115px;
+    margin: 5px 5px 0px 5px; 
     border-radius: 20px 20px 0px 0px;
 }
 
 .vignettes img
 {
-    max-width: 300px;
+    max-width: 400px;
     height: auto; 
-}
-
-.vignettes_infos
-{
-    display: flex;
-    flex-direction: column;
-    padding: 2px 5px 8px 17px;
 }
 
 article .vignettes_infos
 {
-    
-    height: 85px; 
     border-radius: 0 0 20px 20px;
-    
+    height: 77px; 
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 8px;
 }
 
 .vignettes h3
 {
     font-size: 16px; 
-    margin: 5px 3px 0 0; 
+    margin: 0;
+    height: 35px; 
 }
 
 .vignettes p
 {
-    font-size: 14px;
-    margin: 5px 3px 4px 0;  
+    font-size: 13px;
+    margin-top: 2px;
+    margin: 0;
 }
 
 .etoiles
 {
-    display: flex; 
-    margin: auto 0 3px 0;  
+    display: flex;
+    margin-top: 10px; 
 }
 
 .fa-star
@@ -444,7 +459,15 @@ aside
     width: 28%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+@media (max-width:992px)
+{
+
+    aside
+    {
+        width: 32%; 
+    } 
 }
 
 #aside_titre
@@ -464,41 +487,93 @@ aside
 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 aside .vignettes
 {
-    width: 100%;
-    height: 145px; 
+    height: 145px;  
 }
 
-aside .vignettes_conteneur
+@media (max-width:992px)
+{
+    aside .vignettes
+    {
+        height: 210px;
+    }    
+}
+
+aside a
 {
     
-    display: flex;  
+    display: flex;   
     flex-direction: row;
     justify-content: space-between; 
-    width: 100%;
-    height: 100%;
     border-radius: 20px;
+}
+
+@media (max-width:992px)
+{   
+    aside a
+    {
+        flex-direction: column; 
+    }
 }
 
 aside .vignettes_image
 {
     border-radius: 20px 0 0 20px; 
-    width: 130px;  
-    height: 135px;
-    margin: 5px 0px 5px 5px;
-    
+    width: 35%;
+    height: 135px; 
+    margin: 5px 0px 5px 5px;   
+}
+
+@media (max-width:992px)
+{
+    aside .vignettes_image
+    {
+        width: inherit; 
+        border-radius: 20px 20px 0 0;
+        margin: 5px 5px 0 5px;
+        height: 115px; 
+    }
 }
 
 aside .vignettes_infos
 {
-    width: 60%;  
+    width: 65%;
     border-radius: 0 20px 20px 0;
-    padding-top: 8px; 
+    padding: 17px;
+    position: relative;
 }
+
+aside .etoiles
+{
+    position: absolute;
+    bottom: 15px;
+}
+
+@media (max-width:992px)
+{
+    aside .vignettes_infos
+    {
+    border-radius: 0 0 20px 20px; 
+    height: 77px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 8px;
+    padding-bottom: 0;
+    width: inherit;
+    }
+
+    aside .etoiles
+    {
+        position: inherit;
+        bottom: inherit;
+    }
+    
+}
+
+/* style activités */
 
 #section_activites img
 {
@@ -525,13 +600,43 @@ aside .vignettes_infos
     justify-content: space-between;
 }
 
+@media (max-width:992px)
+{
+    
+    #activites
+    {
+        flex-wrap: wrap;
+    }
+}
+
 .vignette_decoupage
 {
     display: flex;
     flex-direction: column;
     width: 22.5%;
-    height: 450px;
     border-radius: 20px;
+}
+
+@media (max-width:992px)
+{
+    
+    .partie_haute
+    {
+        width: 30%; 
+    }
+
+    .partie_basse
+    {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        margin-top: 40px;
+    }
+
+    .partie_basse .vignettes_activites 
+    {
+        width: 47%;
+    }
 }
 
 .bas
@@ -579,6 +684,30 @@ aside .vignettes_infos
     height: 100px;
 }
 
+@media (max-width:992px)
+{
+    
+    .grande .activites_images
+    {
+        height: 300px;
+    }
+
+    .pomegues
+    {
+        height: 100px;
+    }
+
+    .frioul
+    {
+        height: 100px;
+    }
+
+    .partie_haute .bas
+    {
+        margin-top: 40px;
+    }
+}
+
 .garde, .longchamps
 {
     height: 145px;
@@ -605,7 +734,7 @@ footer
     background-color: #F2F2F2;
     display: flex;
     margin-top: 60px;
-    padding: 35px 0 25px 30px;
+    padding: 35px 0 20px 30px;
 }
 
 footer h2
